# demo

./: demo.py  pyproject.toml
