[tool.poetry]
name = "demo"
version = "0.1.0"
description = "learning project"
authors = ["polo <lg550055@hotmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
